--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -8,6 +8,7 @@
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -202,6 +203,23 @@
     four rounds!
   </p>
   <p>Cheers</p>
+</div>
+<div id="r09" style="display: none">
+  <h3>Round 9</h3>
+  <p>Today we faced a tough contest against Ringwood North, which provided an excellent opportunity for our team to build resilience and develop further.</p>
+  <p>
+    The challenging competition brought out some great team play. Cohen, Randall, and Phoenix linked up beautifully by handball, moving the ball quickly to
+    score a goal.
+  </p>
+  <p>
+    Jett had one of his best games of the year, contesting the ball exceptionally well and hitting up targets with precision. Billy continued his impressive
+    form with some great marking throughout the match. Patrick also stood out, attacking the ball fiercely and winning many contested possessions.
+  </p>
+  <p>It was fantastic to have Archer and Cherish back this week, both contributing well all day and showing their growing confidence and skill.</p>
+  <p>
+    We hope everyone enjoys the week's break with no training or game this week. Rest up and recharge, and we look forward to seeing you all back on the track
+    the following Friday.
+  </p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
