--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -7,6 +7,8 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -204,6 +206,52 @@
     F&rsquo;s families for helping to ensure our kids get to play and enjoy the game.
   </p>
   <p>It was great to sing the song as a team again, let&rsquo;s keep working as a team and keep our winning streak alive.</p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>
+    Our round 8 match was away against Kilsyth for the second time this season. We knew we were up for a fight after they ran over the top of us in round 3. At
+    training we have been working on contesting the ball in the air as a particular focus against Kilsyth, as their ability to move the ball by kick and mark
+    was what got them over the line last time.
+  </p>
+  <p>
+    We were led out by our captain Aadhi on her birthday, and got off to a strong start with a 2 goal to none first quarter. The second quarter was a bit of an
+    arm wrestle with us just winning the quarter, but same as the last time we played them they took control and had the better of us in the third with us going
+    into the last quarter with only a one point lead. We seemed to have our heads down coming into the 3 quarter time break, but Gordon and I asked the team to
+    go out and take the game on in the last. We were thrilled with the response with us turning the game around and kicking another 2 goals while keeping
+    Kilsyth goalless to come away with a close win.
+  </p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day, Caleb, Jasper and Ved&rsquo;s families for
+    helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>
+    It was great to sing the song as a team with ice creams in hand, we&rsquo;ll continue to work on playing a team game, and at training we&rsquo;ll focus on
+    working to find space, and move the ball while maintaining possession.
+  </p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r09" style="display: none">
+  <h3>Round 9</h3>
+  <p>
+    Our round 9 match was against Upper Ferntree Gully for the second time in three weeks. We had an idea of what to expect in this game so took the opportunity
+    to shuffle the magnets around for a different mix of players in various positions. In this game we were focused on practising our ball movement based on
+    what we have been working on at training as a priority over the final score.
+  </p>
+  <p>
+    We were led out by Josh O as captain and got off to a strong start with a 3 goal first quarter. We were a bit quieter through the second and third quarters
+    as players were adjusting to different roles and focussing on controlling and retaining possession to move the ball. Gordon and I were absolutely thrilled
+    with the teamwork displayed in this game, with the majority of our goals coming from score assists by finding a player in a better position to score. This
+    really showed in the last quarter where we finished strong with 4 goals, to come away with another convincing win. What was most pleasing about this was
+    that despite focussing more on trialling different matchups over the ground, and controlling the ball, we still managed to have the same amount of scoring
+    shots as the first time we played them.
+  </p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day, Levi F, Wes, Anmar, Dallas and Levi T&rsquo;s
+    families for helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>It was great to sing the song as a team, we&rsquo;ll look forward to having a break due to the bye next week. I hope everyone enjoys the long weekend.</p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
