--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -8,6 +8,7 @@
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -279,6 +280,39 @@
     this is the result we would expect. I will take this knock as a learning opportunity in my coaching journey.
   </p>
   <p>This group has every quality that makes a great team, and I will continue to work on capturing and bringing this out.</p>
+</div>
+<div id="r09" style="display: none">
+  <h3>Round 9</h3>
+  <p>A sunshiny MND round saw Shayla lead the squad out on our home ground.</p>
+  <p>We started off with good intensity and it was just bad luck with a few bounces going the wrong way that stopped us from opening the scoring.</p>
+  <p>
+    Kilsyth are a polished side and their depth, and rotations soon became evident. With a limited bench we, again, were stifled in what we could do with our
+    rotations.
+  </p>
+  <p>
+    With Lily still out with her injured shoulder and a few players going down with early winter ailments, we struggled to field a full side. We thank Mackenzie
+    for stepping up from the under twelves to give us a bench of one.
+  </p>
+  <p>
+    Our inexperience was exposed as Kilsyth were able to free a couple of players out the back of the pack and charged our defence time and time again. As has
+    happened a few times this season, we found ourselves chasing runaway players as they closed in on our defensive lines putting our back line under tremendous
+    pressure.
+  </p>
+  <p>
+    We rotated our players as well as we could around the ground. Although we were strong in the contest, Kilsyth were better at getting on the end of the loose
+    ball and moving it to their advantage.
+  </p>
+  <p>
+    The positive takeaways were that we were able to find our positions on the field quickly and our starts have been improving each week. We have been
+    competitive at the start and have not been caught flat-footed early on. This is testament to the team going on to the field with a conviction that every
+    game is within reach and set out to prove it. Our last quarter, despite being outnumbered and tired, saw us play the best quarter of the game, with Lexie
+    scoring a goal with a great long kick.
+  </p>
+  <p>
+    We need to improve on our shepherding and tackle pressure, we often allowed their players to tackle our hard-ball getters and sat back while they took
+    possession of the ball before we moved to shut them down. We also need to be more decisive with our possessions and need to move the ball quickly,
+    especially when under pressure. We need to be in every contest. We will be working on these skills in training.
+  </p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
