--- a/teams-u14g.html
+++ b/teams-u14g.html
@@ -57,5 +57,6 @@
     <li><a href="/u14g-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
     <li><a href="/u14g-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
     <li><a href="/u14g-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
+    <li><a href="/u14g-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
   </ul>
 </div>
