--- a/teams-u09m.html
+++ b/teams-u09m.html
@@ -62,5 +62,6 @@
     <li><a href="/u09m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
     <li><a href="/u09m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
     <li><a href="/u09m-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
+    <li><a href="/u09m-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
   </ul>
 </div>
