--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -8,6 +8,8 @@
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
+    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -170,6 +172,31 @@
   <p>One of our best team efforts this year so far.</p>
   <p>Goals. Haylee 3, Shaylee 2, Milly, Tiarnah.</p>
   <p>Best. Carly, Milly, Jade, Keely, Lara, Matilda, Haylee, Shaylee, Chloe, Tiarnah</p>
+</div>
+<div id="r09" style="display: none">
+  <h3>Round 9</h3>
+  <p>This Round is a BYE</p>
+</div>
+<div id="r10" style="display: none">
+  <h3>Round 10</h3>
+  <p>We played Montrose at home today.</p>
+  <p>Definitely starting to feel like winter now as it was really cold but no rain which was good and the ground was in good condition.</p>
+  <p>We were really looking to play well today to put ourselves in a good position to play finals and it was also Carly&rsquo;s 50th game.</p>
+  <p>
+    We started really well. The girls were working hard and supporting each other and we had a lot of the ball. Unfortunately we were unable to kick any goals
+    and Montrose kicked a late goal to take the lead at quarter time.
+  </p>
+  <p>
+    In the second quarter, our effort levels dropped and Montrose were able to win more of the ball and kick some more goals. This trend continued for the rest
+    of the game. We did have a few really good moments but not nearly enough to change the outcome.
+  </p>
+  <p>We lost 37-13.</p>
+  <p>
+    We definitely have the ability to play a lot better than how we played today. A fair few of the players &nbsp;also realised that our effort level
+    wasn&rsquo;t good enough today so this gives us an opportunity to work on this at training and improve in that area.
+  </p>
+  <p>With the other sides all improving, we need to improve as well to stay competitive.</p>
+  <p>Hopefully we can bounce back next week.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
