--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -9,6 +9,7 @@
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
+    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -312,6 +313,41 @@
     We need to improve on our shepherding and tackle pressure, we often allowed their players to tackle our hard-ball getters and sat back while they took
     possession of the ball before we moved to shut them down. We also need to be more decisive with our possessions and need to move the ball quickly,
     especially when under pressure. We need to be in every contest. We will be working on these skills in training.
+  </p>
+</div>
+<div id="r10" style="display: none">
+  <h3>Round 10</h3>
+  <p>
+    A cold morning saw Tori lead the team out for a 10:05 match at Heatherdale away to Heathmont. No Paul as trainer this weekend so Scott stepped into the
+    role, and we thank him for his assistance today.<br />&nbsp;<br />We knew coming into this game that Heathmont were going to be a physical opponent. Last
+    time we met them with an undermanned side, they exerted their physicality, and they took the win. This time, even though we were not at full strength, with
+    illness and injury again taking its toll, keeping us to 16 players and no bench, we were ready to stand up as a team and show that we came here to
+    play!&nbsp;
+  </p>
+  <p>Mackenzie again stepped up from the under12&rsquo;s and she proved to be a pocket rocket! Thank-you again for your efforts. &nbsp;</p>
+  <p>
+    It was a tough, tough match from the opening bounce to the final siren. They tried to exert their physicality on us, but we held strong across all positions
+    on the field. Like we discussed, their intimidation of an undermanned side &nbsp;was the difference in the last game, and we knew that if we let them
+    intimidate us, they would walk away with an easy win. Well, they did not walk away with an easy win.
+  </p>
+  <p>
+    As the game wore on, Heathmont realised that we were more than standing up to them and they intensified their physical game. We did not capitulate, and they
+    had to battle for every possession.
+  </p>
+  <p>
+    Tori and Lexie, a couple of late casualties of this physical game, but these girls proved our fighting spirit. Leaving it all on the pitch. &nbsp; We played
+    as a team and most of our attack and scoring was the result of a team effort. We put into play our rehearsed pressure play and they were lucky not to be
+    tackled to the ground more often! Our tackling was outstanding, and our pressure was great. We still need to improve a bit on getting to the ball first, but
+    this is about the only thing that let us down during the game, and certainly not the theme of our day.
+  </p>
+  <p>
+    I could see our girls at the end of the day looking tired but overall satisfied in the knowledge that they have the fortitude as a team to stand up to the
+    physical and mental game. They did not give in. Right to the final siren, they fought, stood up to and hustled the opposition all over the ground. A couple
+    unlucky bounces and umpiring decisions went against us, but that is the nature of the game.
+  </p>
+  <p>
+    An unlucky one-point loss to a team that was probably thinking of a walkover victory is something that the girls can be proud of. The girls showed that they
+    are not a team to be taken lightly. Heathmont found that out today.
   </p>
 </div>
 <div id="not-found" style="display: none">
