--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -7,6 +7,9 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
+    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -121,6 +124,48 @@
     well and ran out the game to win by 26 points.
   </p>
   <p>Better players- Jordan Porter, Mason Finch, Jacob Green, Xavier Bickers, Brodie Talia and Blake Sales.</p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>
+    Coming into Round 8 against Blackburn, we discussed the oppositions strengths and weaknesses, including #9 for Blackburn, Joel Ramage who had kicked 37
+    season goals. Axel was tasked with minimising his impact.
+  </p>
+  <p>
+    Through the first quarter the competition was very even, however we gave away two easy goals. The second quarter was much more challenging, facing the #1
+    side&rsquo;s forward pressure. We kicked 0.1 to their 4.9.
+  </p>
+  <p>
+    The third quarter displayed our determination through adversity, the team wanted to raise the standard and really lifted the pressure. We had 2 goals 3, to
+    their 3 goals 2. Through the last term we held the bar high. We showed Blackburn our true capability, kicking five goals one behind. Although the damage of
+    the second quarter was already done, the boys kept their pursuit, having an honourable last half!&nbsp;
+  </p>
+  <p>Better players: Christian, Axel, Blake, Shev</p>
+</div>
+<div id="r09" style="display: none">
+  <h3>Round 9</h3>
+  <p>
+    After playing North Ringwood during the season twice already, the boys knew what we had to do to get a win. Unfortunately, we had five of our more
+    experienced players out due to injury, sickness and holidays. We got off to a slow start with North Ringwood taking control early. This trend unfortunately
+    continued throughout the remainder of the game. Our tackles didn&rsquo;t stick and our endeavour to win contests wasn&rsquo;t there today. Whilst we had a
+    tough day at the office, we have a lot of positives to take into our next handful of games. With players coming back after the break, I feel we have such a
+    good opportunity as we head into the finals. Let&rsquo;s get to training, work hard for each other and enjoy the next few weeks.
+  </p>
+  <p>Better players- Axel, Bruce, Shev and Christian.</p>
+</div>
+<div id="r10" style="display: none">
+  <h3>Round 10</h3>
+  <p>
+    We came into the game feeling really upbeat and ready to play a really good game for Gus in his 50th game. We started off by kicking the first 3 goals in a
+    matter of minutes, and were playing really exciting football. After kicking away early, and to Norwood's credit, they kicked the next 6 goals to be leading
+    by a few goals half way through the second quarter. It was at this time we started to get our hands on the ball and controlled the game, to go into half
+    time leading by 7 points. After resetting the board and making a few moves, I thought that with the lack of players Norwood had, that we would run all over
+    them in the premiership quarter. And that we did, kicking 5 goals to Norwood's none in the third quarter. This set us up and provided us with a handy lead
+    as we went into the final term. The final term started off in a similar way as we started off the third, with us kicking the first two goals. At this time
+    we gave some opportunities to players to have a run in different positions which was really exciting. The next couple games could set us up as we enter the
+    final games of the season. I really believe in this team, and as long as we keep training hard and being positive we could go a long way.
+  </p>
+  <p>Better players: Shev, Jordan, Brodie, Koby, Tommy, Jacob, Xavier and Harry.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
