--- a/teams-u15b.html
+++ b/teams-u15b.html
@@ -57,5 +57,8 @@
     <li><a href="/u15b-match-report/?id=r05" rel="nofollow">Round 5 Match Report</a></li>
     <li><a href="/u15b-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
     <li><a href="/u15b-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
+    <li><a href="/u15b-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
+    <li><a href="/u15b-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
+    <li><a href="/u15b-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
   </ul>
 </div>
