--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -9,6 +9,8 @@
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
+    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
+    else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -220,6 +222,32 @@
     We hope everyone enjoys the week's break with no training or game this week. Rest up and recharge, and we look forward to seeing you all back on the track
     the following Friday.
   </p>
+</div>
+<div id="r10" style="display: none">
+  <h3>Round 10</h3>
+  <p>See Round 11 Report</p>
+</div>
+<div id="r11" style="display: none">
+  <h3>Round 11</h3>
+  <p>
+    Over the past few weeks, the team has continued to improve on looking for targets downfield and building on ball movement by hands out of the middle. We've
+    also increased our focus on encouraging each other and celebrating the hard work and effort of our teammates.
+  </p>
+  <p>
+    I&rsquo;ve been really impressed with the attack from Jett and Patrick, especially their outstanding second efforts over the past two games. Their
+    determination and resilience have been commendable.
+  </p>
+  <p>
+    Last week, we had the pleasure of welcoming Alex to the team. It was awesome to see him score his first goal this week! Randall has also been in cracking
+    form, displaying excellent teamwork around the ground. His selflessness in passing in front of goal to share our success has been amazing.
+  </p>
+  <p>
+    A big thanks to our post-match stars: Lewis, who snagged a tidy bag of goals yesterday; Candice, with some impressive ruck work; and Lennox, who really
+    stepped up in the last quarter, making a big impact on the game. They should be proud of their contributions on the field over the past few rounds. It was
+    also great to see Billy continue to show confidence in attacking the ball, and Harvey had one of his best games of the year.
+  </p>
+  <p>It was fantastic to celebrate our team&rsquo;s success at the round-up last night, great to see so many of the players and parents there!</p>
+  <p>Congratulations to our players of the round Jett, Jack and Harvey and our Round Up Player T-Shirt awarded to Randall, Well done everyone!</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
