--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -9,6 +9,7 @@
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
+    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -252,6 +253,40 @@
     families for helping to ensure our kids get to play and enjoy the game.
   </p>
   <p>It was great to sing the song as a team, we&rsquo;ll look forward to having a break due to the bye next week. I hope everyone enjoys the long weekend.</p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r10" style="display: none">
+  <h3>Round 10</h3>
+  <p>
+    What a special occasion for our team, our first 50 game players. Congratulations to Caleb and Wes on this fantastic achievement, you have both been
+    fantastic to coach over the years and a pleasure to have as part of the team. It was so exciting to see you both run through your banners and lead the team
+    on to the field after we acknowledged your achievement pregame with a milestone medal presentation. A huge thank you to Shaun for being involved and sharing
+    some words for the boys as part of this.
+  </p>
+  <p>
+    We got off to a flying start with our 50 gamers kicking our first and third goal of the game to finish with a 5 goal first quarter for the team. The game
+    slowed a little for the second and third quarter with scoring a bit harder to come by, but after the three quarter time break we asked the team to finish
+    strong and they sure did with another 5 goal quarter to finish up with the highest score from any team this season.
+  </p>
+  <p>
+    At training during the week we focussed on blocking and communication with our teammates and it was great to see this reflected in the way we played with
+    blocking and shepherding being a real feature in this game. This will be a great addition to the way we play as we come up against some tougher opposition
+    at the end of the season.
+  </p>
+  <p>
+    There were some real key highlights in this game that stood out for Gordon and myself, Levi F&rsquo;s class to evade two opponents and snap from near the
+    boundary for what surely must be considered for goal of the year. Brodie&rsquo;s workrate and effort to run past three opposition players in much better
+    position and get to the ball first to hold it up on the wing until help arrived and win the contest, and Josh O getting to Ben and acknowledging his great
+    defensive act which often goes unnoticed, showed some real awareness and leadership to award the little things that make a difference.
+  </p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day, Pep, Aadhi, and Mitch&rsquo;s families for
+    helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>
+    It was great to sing the song as a team, with our 50 gamers in the middle of the circle getting a light squirt of water. I&rsquo;m looking forward to the
+    chance to celebrate further milestones within the team over the remainder of the season and hope to keep the momentum going.
+  </p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
