--- a/teams-u09m.html
+++ b/teams-u09m.html
@@ -63,5 +63,7 @@
     <li><a href="/u09m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
     <li><a href="/u09m-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
     <li><a href="/u09m-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
+    <li><a href="/u09m-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
+    <li><a href="/u09m-match-report/?id=r11" rel="nofollow">Round 11 Match Report</a></li>
   </ul>
 </div>
