--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -10,6 +10,8 @@
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
+    else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
+    else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -197,6 +199,34 @@
   </p>
   <p>With the other sides all improving, we need to improve as well to stay competitive.</p>
   <p>Hopefully we can bounce back next week.</p>
+</div>
+<div id="r11" style="display: none">
+  <h3>Round 11</h3>
+  <p>Today we played South Croydon at their home ground.</p>
+  <p>I was away on holidays so my assistant coaches Daniel and Brent coached the girls.</p>
+  <p>South Croydon were on top of the ladder so it was always going to be a tough game.</p>
+  <p>We did lose 56-30 but the coaches for the day said they tried hard all day, we were just beaten by a better team.</p>
+  <p>Best. Milly, Matilda, Chloe, Riann, Lara, Ella, Shaylee, Haylee</p>
+  <p>Goals. Haylee 2, Lara 2,Shaylee</p>
+</div>
+<div id="r12" style="display: none">
+  <h3>Round 12</h3>
+  <p>Today we had Boronia at their big senior ground. It was a very cold winter day so we needed to get ourselves up for the challenge.</p>
+  <p>We really wanted a win today to increase our chances of making the finals.</p>
+  <p>
+    We started very well and the first quarter was very even. At quarter time we talked about what was working well for us and things we needed to improve to
+    play better footy.
+  </p>
+  <p>
+    The first half of the second quarter was tight so it was anyone&rsquo;s game but in the second half of the quarter, Boronia edged away. They were just a bit
+    more disciplined than us and that makes a difference in these wet, cold conditions. They got the lead on us at half time.
+  </p>
+  <p>
+    The second half continued in the same fashion. Boronia were just working a bit harder than us resulting in them having a bit more of the ball. We kept
+    trying all game but didn&rsquo;t quite have what we needed to claw back their lead.
+  </p>
+  <p>We went down 26-0.</p>
+  <p>Best. Matilda, Keelie, Chloe, Shaylee, Riann, Gemma, Ella, Mia, Ella</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
